# ApertusVR

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  fila_test.m  prepare_cxx.cmake
.github/: FUNDING.yml
androidx/apertusvr-android/: gradle.properties
androidx/apertusvr-android/apertusvr/src/main/java/org/apertusvr/: ApertusJNI.java  apeSphereGeometry.java  (+1 more)
cmake/: prepare_ape.cmake  prepare_cmake.cmake  prepare_curl.cmake  prepare_cxx.cmake
common/include/datatypes/: ApeEvent.h  ApeVector2.h
common/include/system/: ApeFileSystem.h
common/include/utils/: ApeDateTime.h  ApeMath.h  CMakeLists.txt
core/: CMakeLists.txt
core/cmake/: CMakeLists.txt  conanfile.txt  prepare_raknet.cmake
core/coreConfig/: CMakeLists.txt
core/pluginManager/: CMakeLists.txt
core/sceneManager/: ApeCameraImpl.cpp  ApeIndexedFaceSetGeometryImpl.cpp  ApeIndexedFaceSetGeometryImpl.h  ApeLightImpl.cpp  ApePbsMaterialImpl.cpp  ApePbsMaterialImpl.h  ApeSceneManagerImpl.cpp  ApeTextGeometryImpl.cpp  CMakeLists.txt  apeNodeImpl.cpp  apeNodeImpl.h
core/sceneManager/network/: apeReplicaManagerConnection.cpp  prepare_zip.cmake
core/sceneManager/session/: ApeReplica.cpp  ApeSceneSessionImpl.cpp
core/system/: CMakeLists.txt
include/: ape.h  apeColor.h  apeDegree.h  apeDoubleQueue.h  apeEntity.h  apeEuler.h  apeMatrix3.h  apeQuaternion.h  apeRadian.h  apeVector3.h  apeVector4.h
include/datatypes/: apeEntity.h  apeEvent.h  apeGeometry.h
include/sceneElements/: CMakeLists.txt  apeIIndexedFaceSetGeometry.h  apeIPbsMaterial.h
macros/sceneMaker/: ApeSceneMakerMacro.cpp
macros/sceneMaker/resources/: skyBox.material  sky_BK.dds  sky_DN.dds  sky_FR.dds  sky_LF.dds  sky_RT.dds  sky_UP.dds
plugins/: CMakeLists.txt
plugins/artScene/: ApeArtScenePlugin.h
plugins/assimpAssetLoader/: ApeAssimpAssetLoaderPlugin.cpp  ApeAssimpAssetLoaderPlugin.h  CMakeLists.txt
plugins/assimpAssetLoader/resources/: BoomBox.gltf
plugins/audi/: ApeAudiPlugin.h
plugins/coreSyncTest/: ApeCoreSyncTestPlugin.cpp  ApeCoreSyncTestPlugin.h  CMakeLists.txt
plugins/engineeringScene/: ApeEngineeringScenePlugin.h
plugins/gyor/: ApeGyorPlugin.h
plugins/gyorPathPlanning/: ApeGyorPathPlanningPlugin.h
plugins/htmlOverlayUI/: ApeHtmlOverlayUIPlugin.h
plugins/industry40/: ApeIndustry40Plugin.cpp  ApeIndustry40Plugin.h
plugins/jni/: CMakeLists.txt  apeJNITextGeometry.cpp
plugins/jsAPI/nodeJsExtension/wrappers/: ApeJsBindIndexedFaceSetGeometryImpl.h  ApeJsBindManager.h  ApeManualMaterialJsBind.h  ApePbsPassJsBind.h
plugins/jsAPI/nodeJsPlugin/js/modules/module_manager/: config.json
plugins/lego/: ApeLegoPlugin.h
plugins/linkageDesignerVR/: ApeLinkageDesignerVRPlugin.h
plugins/oculusDK2/: ApeOculusDK2Plugin.cpp
plugins/ogre21Render/: ApeOgre21Conversions.h  ApeOgre21RenderPlugin.cpp  ApeOgre21RenderPlugin.h  ApeOgre21RenderPluginConfigs.h  CMakeLists.txt
plugins/ogre21Render/media/packs/DebugPack/: DebugFont.fontdef
plugins/ogre21Render/media/packs/OgreCore/: New_Ogre_Border_Center.dds  OgreCore.material  OgreProfiler.material
plugins/ogre21Render/media/packs/profiler/: OgreProfiler.material
plugins/oisUserInput/: CMakeLists.txt
plugins/oisUserInput/cmake/: prepare_ois.cmake
plugins/photorealisticScene/: ApePhotorealisticScenePlugin.cpp  ApePhotorealisticScenePlugin.h  CMakeLists.txt
plugins/pointCloudRecorder/: ApePointCloudRecorderPlugin.h
plugins/polimi/: ApePolimiPlugin.h
plugins/render/: CMakeLists.txt
plugins/render/filamentRenderMac/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  CMakeLists2.txt  MainViewController.h  MainViewController.mm  Makefile  apeFilamentRenderMacPlugin.h  apeFilamentRenderMacPlugin.mm  main  main.mm  main2.mm
plugins/render/filamentRenderMac/Base.lproj/: MainMenu.xib
plugins/render/filamentRenderMac/lib/x86_64/: libfilament-jni.dylib
plugins/robotCalibration/: ApeRobotCalibrationPlugin.h
plugins/scene/: CMakeLists.txt
plugins/scene/macFilamentScene/: CMakeLists.txt  apeFilamentMacScenePlugin.cpp  apeFilamentMacScenePlugin.h
plugins/sceneRecorder/: ApeSceneRecorderPlugin.h
plugins/tester/: ApeTesterPlugin.h
plugins/webserver/: ApeWebserverPlugin.h
samples/: CMakeLists.txt
samples/coreSyncTest/: ApeCoreSyncTest.cpp  CMakeLists.txt
samples/coreSyncTest/configs/: CMakeLists.txt
samples/coreSyncTest/configs/guest/: ApeSystem.json  CMakeLists.txt
samples/coreSyncTest/configs/host/: ApeSystem.json  CMakeLists.txt
samples/coreSyncTest/configs/local/: ApeSystem.json  CMakeLists.txt
samples/coreTester/: apeCoreTester.cpp
samples/filamentMac/: CMakeLists.txt  apeCore.json
samples/mixedReality/configs/local_monitor/: ApeOisUserInputPlugin.json  CMakeLists.txt  apeAssimpAssetLoaderPlugin.json  apeCore.json
tests/apeColor_test/: apeColor_test.vcxproj  output.txt
tests/apeColor_test/x64/Debug/: vc141.idb
tests/apeColor_test/x64/Debug/apeColor_test.tlog/: CL.read.1.tlog  CL.write.1.tlog  apeColor_test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/apeColor_test/x64/Debug/include_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/include_test/: apeColor_test.cpp  apeColor_test.vcxproj
tests/include_test/x64/Debug/: vc141.idb
tests/include_test/x64/Debug/apeColor_test.tlog/: CL.command.1.tlog  apeColor_test.write.1u.tlog
tests/include_test/x64/Debug/include_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  include_test.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/include_tests/: apeDegree_test.cpp  apeDoubleQueue_test.cpp  apeEntity_test.cpp  apeMatrix3_test.cpp  apeQuaternion_test.cpp  apeRadian_test.cpp  apeVector3_test.cpp  apeVector4_test.cpp  include_tests.vcxproj
tests/include_tests/x64/Debug/: vc141.idb
tests/include_tests/x64/Debug/include_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  include_tests.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
utilities/apm/templates/: plugin_h.template
